--- a/index.html
+++ b/index.html
@@ -20,12 +20,85 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <style>
+      .wrapper {
+        background: linear-gradient(
+          rgba(255, 0, 0, 0.597),
+          rgba(128, 0, 128, 0.592)
+        );
+        min-height: 100vh;
+      }
+      .table {
+        --bs-table-bg: transparent;
+      }
+    </style>
     <title>Schedule Rectifier</title>
   </head>
   <body>
-    <button class="btn btn-danger">
-      Click Me <i class="fa-solid fa-house"></i>
-    </button>
+    <div class="wrapper pt-5">
+      <!-- Title -->
+      <class="container">
+        <h1 class="text-center">Schedule Rectifier</h1>
+
+        <!-- Form -->
+        <form 
+        onsubmit="handleOnSubmit(this)"
+        action="javascript:void(0)" class="border p-5 rounded shadow-lg mt-5">
+          <div class="row g-2">
+            <div class="col-md-7">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Task"
+                aria-label="First name"
+                name="task"
+              />
+            </div>
+            <div class="col-md-2">
+              <input
+                type="number"
+                class="form-control"
+                placeholder="40"
+                aria-label="Last name"
+                name="hr"
+                min="1"
+              />
+            </div>
+            <div class="col-md-3 d-grid">
+              <button class="btn btn-primary">Add new task</button>
+            </div>
+          </div>
+        </form>
+        <!-- Tables -->
+        <div class="row mt-5">
+          <div class="col-md">
+            <h3 class="text-center">Entry List</h3>
+            <hr />
+            <!-- Entry List Table  -->
+            <table class="table table-striped table-hover border">
+              <tbody id="entryList">
+               
+              </tbody>
+            </table>
+          </div>
+          <div class="col-md">
+            <h3 class="text-center">Bad List</h3>
+            <hr />
+            <!-- Bad List Table  -->
+            <table class="table table-striped table-hover border">
+              <tbody id="badList">
+               
+              </tbody>
+            </table>
+            <div class="alert alert-success">You could have saved = <span id="savedHrsElm"></span>
+                 hrs</div>
+          </div>
+        </div>
+        <div class="alert alert-success">
+            The total hours allocated = <span id="ttlHrs">0</span> hrs
+        </div>
+      </div>
+    </div>
+    <script src="./script.js"></script>
   </body>
 </html>
